--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
             </ul>
         </nav>
         <ul class="contacts list">
-            <li><a class="header-contact link mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-contact link phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="header-contact link mail" href="mailto:info@devstudio.com"> <svg class="mail_svg"><use href="./img/icons.svg#icon-envelope"> </use></svg>info@devstudio.com</a></li>
+            <li><a class="header-contact link phone" href="tel:+380961111111"> <svg class="phone_svg"> <use href="./img/icons.svg#icon-smartphone"> </use></svg>+38 096 111 11 11</a></li>
         </ul>     
     </div>   
 </header>
@@ -41,59 +41,94 @@
             <li class="works-item"><button class="works-links" type="button">Маркетинг</button></li>
         </ul>
         <ul class="list work-pic">
-        <li class="work-img"><img src="./img/our-works/techo.png" alt="Изображение выполенной работы" width="370" height="294">
-          <div class="img-wrap">
-            <h2 class="work-name">Технокряк</h2>
-            <p class="work-descriptions">Веб-сайт</p>
-          </div>
+        <li class="work-img">
+          <a class="work-img-link link" href="">
+            <img src="./img/our-works/techo-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="img-wrap">
+              <h2 class="work-name">Технокряк</h2>
+              <p class="work-descriptions">Веб-сайт</p>
+            </div>
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/poster.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/poster-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
           <h2 class="work-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
           <p class="work-descriptions">Дизайн</p>
-          </div>
+          </div>  
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/restoran.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/restoran-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
           <h2 class="work-name">Ресторан <span lang="en">Seafood</span></h2>
           <p class="work-descriptions">Приложение</p>
-          </div>    
+          </div>      
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/prime-project.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="link work-img-link">
+          <img src="./img/our-works/prime-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">Prime</span></h2>
             <p class="work-descriptions">Маркетинг</p>
-          </div>          
+          </div>            
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/boxes-project.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/boxes-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">Boxes</span></h2>
             <p class="work-descriptions">Приложение</p>
-          </div>
+          </div>  
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/insipration.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/insipration-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name" lang="en">Inspiration has no Borders</h2>
             <p class="work-descriptions">Веб-сайт</p>
-          </div> 
+          </div>   
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/limited-edit.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/limited-edit-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name">Издание <span lang="en">Limited Edition</span></h2>
             <p class="work-descriptions">Дизайн</p>
-          </div>
+          </div>  
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/lab.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/lab-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">LAB</span></h2>
             <p class="work-descriptions">Маркетинг</p>
-          </div>
+          </div>  
+          </a>
         </li>
-        <li class="work-img"><img src="./img/our-works/grow-biz.png" alt="Изображение выполенной работы" width="370" height="294">
+
+        <li class="work-img">
+          <a href="" class="work-img-link link">
+          <img src="./img/our-works/grow-biz-min.png" alt="Изображение выполенной работы" width="370" height="294">
           <div class="img-wrap">
             <h2 class="work-name" lang="en">Growing Business</h2>
             <p class="work-descriptions">Приложение</p>
-          </div>
+          </div>  
+          </a>
         </li>
        </ul>
       </div>
@@ -101,8 +136,9 @@
 </main>
 <footer class="footer">
   <div class="container footer-size"> 
-      <a class="link fii" href=""> <span class="logo-first">Web</span><span class="logo-second logo-background-dark">Studio</span> </a>
-      <address>
+      <div class="footer-left-side"> 
+       <a class="link fii" href=""> <span class="logo-first">Web</span><span class="logo-second logo-background-dark">Studio</span> </a>
+       <address>
           <ul class="footer-info list">
             <li class="footer-li">
               <a class="footer-address link" href="https://goo.gl/maps/US6K8y8bepEvWujB8" target="_blank"  rel="noopener noreferrer" >г. Киев, пр-т Леси Украинки, 26</a>
@@ -115,7 +151,33 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="fotter-right-side">
+          <p class="fotter-right-side-p">ПРИСОЕДИНЯЙТЕСЬ</p>
+          <ul class="fotter-list list">
+              <li class="fotter-social-item"> 
+                 <a href="" class="footer-social-list-link">
+                 <svg class="fotter-social-list-icon" width="20" height="20" >
+                  <use href="./img/icons.svg#icon-instagram"></use></svg> </a></li>
+              
+              <li class="fotter-social-item">
+                  <a href="" class="footer-social-list-link">
+                  <svg class="fotter-social-list-icon" width="20" height="20" >
+                   <use href="./img/icons.svg#icon-twitter"></use></svg> </a></li></li>
+
+              <li class="fotter-social-item">
+                  <a href="" class="footer-social-list-link">
+                  <svg class="fotter-social-list-icon" width="20" height="20" >
+                   <use href="./img/icons.svg#icon-facebook"></use></svg> </a></li></li>
+
+              <li class="fotter-social-item">
+                  <a href="" class="footer-social-list-link">
+                  <svg class="fotter-social-list-icon" width="20" height="20" >
+                   <use href="./img/icons.svg#icon-linkedin"></use></svg> </a></li></li>
+          </ul>
+      </div>
   </div>
+ 
 </footer>
 </body>
 </html>
