--- a/index.html
+++ b/index.html
@@ -211,32 +211,32 @@
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo"> </use></svg> </a></li>
 
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo-1"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo-1"> </use></svg> </a></li>
 
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo-2"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo-2"> </use></svg> </a></li>
 
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo-3"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo-3"> </use></svg> </a></li>
 
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo-4"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo-4"> </use></svg> </a></li>
 
                     <li class="regular-client-item"> 
                         <a class="regular-client-link" href=""> 
                         <svg class="regular-client-icon" width="106" height="60" > 
-                        <use href="/img/icons.svg#icon-logo-5"> </use></svg> </a></li>
+                        <use href="./img/icons.svg#icon-logo-5"> </use></svg> </a></li>
                 </ul>
             </div>
         </section>
