--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
             </ul>
         </nav>
         <ul class="contacts list">
-            <li><a class="header-contact link mail" href="mailto:info@devstudio.com"> <svg class="mail_svg"><use href="./img/icons.svg#icon-envelope"> </use></svg>info@devstudio.com</a></li>
-            <li><a class="header-contact link phone" href="tel:+380961111111"> <svg class="phone_svg"> <use href="./img/icons.svg#icon-smartphone"> </use></svg>+38 096 111 11 11</a></li>
-        </ul>     
+          <li class="mail-link"><a class="header-contact link mail" href="mailto:info@devstudio.com"> <svg class="mail_svg"> <use href="./img/icons.svg#icon-envelope"> </use></svg>info@devstudio.com</a></li>
+          <li class="phone-link"><a class="header-contact link phone" href="tel:+380961111111"> <svg class="phone_svg"> <use href="./img/icons.svg#icon-smartphone"> </use></svg>+38 096 111 11 11</a></li>
+      </ul>   
     </div>   
 </header>
 <main>
